# picow-mctp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lwip_import.cmake
mctp/: CMakeLists.txt
mctp/include/mctp/: binding.h  crc16.h  message_ctx.h  packet_buffer.h  private_core.h
mctp/include/mctp/mctp/: control.h  mctp.h  message.h  msg_type.h  serial.h  uuid.h
mctp/src/: crc16.c  mctp.c  message_ctx.c  packet_buffer.c  serial.c  uuid.c
pldm/: CMakeLists.txt
pldm/include/pldm/: private_core.h  private_multipart.h  private_pdr.h  private_rde_operation.h  private_rde_resource.h  private_terminus.h
pldm/include/pldm/pldm/: base.h  mctp_transport.h  monitor.h  multipart.h  platform.h  pldm.h  terminus.h  types.h  util.h
pldm/include/pldm/pldm/message/: base.h  platform.h  redfish.h
pldm/include/pldm/pldm/pdr/: entry.h  num_sens.h  pdr.h  redfish_resource.h  repo.h  term_loc.h
pldm/include/pldm/pldm/pdr/record/: accessor.h  numeric.h  numeric_sensor.h  redfish_resource.h  terminus_locator.h
pldm/include/pldm/pldm/rde/: bej.h  operation.h  pack.h  provider.h  resource.h  schema.h  unpacked.h
pldm/src/: mctp_transport.c  multipart.c  pdr.c  pldm.c  repo.c  terminus.c  util.c
pldm/src/pdr/: entry.c  pdr.c  repo.c
pldm/src/rde/: bej.c  operation.c  provider.c  resource.c  schema.c  unpacked.c
src/: control_handler.c  control_handler.h  dump.c  dump.h  main.c  pldm_base_handler.c  pldm_base_handler.h  pldm_platform_handler.c  pldm_platform_handler.h  pldm_redfish_handler.c  pldm_redfish_handler.h  rde_resources.h
src/dht11/: driver.c  driver.h
src/dict/: chassis.h  sensor.h  sensor_collection.h
src/redfish/: resource.h
src/responder/mctp/: control_handler.c
src/responder/pldm/: base_handler.c  platform_handler.c  redfish_handler.c  redfish_handler.h
